# telegram_antilurk_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
.specify/memory/: constitution.md
data/config/: channels.yaml  config.yaml  puzzles.yaml
deploy/: DATABASE_SETUP.md  EXTERNAL_DATABASE_VALIDATION.md  README.md  configure_postgres_external.sh  conftest.py  docker-compose.yml  portainer-stack.yaml  portainer-stack.yml  setup_external_postgres.md  test_external_connection.py
specs/001-lurker-kicking-bot/: plan.md  spec.md  tasks.md
src/telegram_antilurk_bot/: __init__.py  __main__.py  __run__.py  main.py  py.typed
src/telegram_antilurk_bot/admin/: __init__.py  checkuser_command.py  permission_validator.py  reboot_command.py  report_command.py  show_commands.py  unlink_command.py
src/telegram_antilurk_bot/audit/: __init__.py  audit_engine.py  backlog_manager.py  lurker_selector.py  rate_limiter.py  scheduler.py
src/telegram_antilurk_bot/bot/: __init__.py  core.py
src/telegram_antilurk_bot/challenges/: __init__.py  callback_handler.py  challenge_engine.py  composer.py  engine.py  modlog_notifier.py  tracker.py
src/telegram_antilurk_bot/config/: __init__.py  defaults.py  loader.py  schemas.py
src/telegram_antilurk_bot/core/: __init__.py  bot.py
src/telegram_antilurk_bot/database/: __init__.py  models.py  session.py
src/telegram_antilurk_bot/logging/: __init__.py  lifecycle_logger.py  message_archiver.py  message_processor.py  nats_publisher.py  provocation_logger.py  user_tracker.py  view_updater.py
src/telegram_antilurk_bot/models/: __init__.py  base.py  message.py  provocation.py  user.py
tests/: conftest.py
tests/contract/: __init__.py  test_component_contracts.py
tests/data/config/: channels.yaml  config.yaml  puzzles.yaml
tests/integration/: __init__.py  test_database_connection.py  test_environment_validation.py  test_full_workflow.py  test_nats_connectivity.py  test_telegram_connectivity.py
tests/smoke/: __init__.py  test_deployment.py
tests/unit/: test_admin_commands.py  test_audit_scheduler.py  test_bot_core.py  test_challenge_flow.py  test_config_loader.py  test_config_schemas.py  test_database_models.py  test_message_logging.py  test_onboarding.py
tests/unit/data/config/: channels.yaml  config.yaml  puzzles.yaml
