[project]
name = "telegram-antilurk-bot"
version = "0.1.0"
description = "A Telegram moderation bot that identifies and challenges inactive members"
readme = "README.md"
authors = [
    { name = "Sal Fadhley", email = "sfadhley@hartreepartners.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "click>=8.3.0",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.4",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.43",
    "structlog>=25.4.0",
]

[project.scripts]
telegram-antilurk-bot = "telegram_antilurk_bot:main"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "faker>=37.8.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
